# Typing_Trainer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.md.old  build-debug.ps1  build-release.ps1  configure.ps1  ngram_stats.json
source/: concurrent_queue.hpp  contracts.hpp  main.cpp
source/backend/: typing_trainer_core.cpp
source/main_window/: CMakeLists.txt  main_window.cpp  main_window.h
src/: CMakeLists.txt  concurrent_queue.hpp  contracts.hpp  main.cpp
src/backend/: CMakeLists.txt  dictionaries.cpp  dictionaries.hpp  ngram_statistics.cpp  ngram_statistics.hpp  smart_text_generator.cpp  smart_text_generator.hpp  typing_trainer_core.cpp  typing_trainer_core.hpp
src/frontend/: CMakeLists.txt  Theme.qml  main.qml  main_window.cpp  typing_trainer_adapter.cpp  typing_trainer_adapter.hpp
src/frontend/elements/: XButton.qml  XSegmentedControl.qml
src/main_window/: main_window.cpp  main_window.h
